// conformancelib/build.gradle

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
    }
}

plugins {
    id 'java-library'
    id 'org.ajoberstar.grgit' version '2.1.0'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
    id "de.jjohannes.extra-java-module-info" version "0.1"
}

java {
    modularity.inferModulePath.set(true)
}

apply plugin: 'java-library'
apply plugin: 'eclipse'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'org.junit.platform.gradle.plugin'

targetCompatibility = JavaVersion.VERSION_11
sourceCompatibility = JavaVersion.VERSION_11

logger.warn("target java version: " + targetCompatibility)
logger.warn("source java version: " + sourceCompatibility)

//import org.gradle.plugins.ide.eclipse.model.AccessRule

eclipse {
    classpath {
        file {
            whenMerged {
                //def jre = entries.find { it.path.contains 'org.eclipse.jdt.launching.JRE_CONTAINER' }
                //jre.accessRules.add(new AccessRule('0', 'javax/smartcardio/**'))
                //def lib = entries.find { it.path.contains '.' }
                //println '--> ' + lib
                //lib.sourcePath = fileReference(file('../libs/gov.gsa.pivconformance.conformancelib-sources' + '-' + getVersion() + '.jar'))
            }
        }
    }
}

repositories {
    jcenter()
    maven { url 'https://repository.apache.org/snapshots' }
    flatDir {
        dirs '../libs', '../cardlib/build/libs'
    }
}

def getVersion = { ->
    File resourcesDir = new File(project.getProjectDir(), 'src/main/resources/')
    File versionFile = new File(resourcesDir, 'build.version')
    if(!versionFile.exists()) {
        resourcesDir.mkdirs()
        versionFile.createNewFile()
        println 'Initializing build.version file'
        versionFile.text = '0.0-changeme'
    }
    String version = versionFile.text.replaceAll("[\\n\\r\\t ]", "")
}

// custom task from
// https://stackoverflow.com/questions/39444908/how-to-create-an-html-report-for-junit-5-tests
// to get readable output for passing tests
configurations {
    junitXmlToHtml
}
dependencies {
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
    //implementation 'org.bouncycastle:bcprov-ext-jdk15on:1.66'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
    implementation 'org.apache.commons:commons-cli:1.4'

    implementation 'org.apache.commons:commons-csv:1.8'

    implementation 'org.apache.commons:commons-codec:1.11'
    implementation 'com.payneteasy:ber-tlv:1.0-8'
    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
    implementation 'ch.qos.logback:logback-core:1.3.0-alpha5'
    implementation 'org.xerial:sqlite-jdbc:3.32.3.2'
    implementation 'org.apache.ibatis:ibatis-core:3.0'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
    implementation 'org.junit.jupiter:junit-jupiter-params:5.4.2'
    implementation 'org.junit.jupiter:junit-jupiter-params:5.4.2'
    implementation 'org.junit.platform:junit-platform-launcher:1.4.2'
    implementation 'info.picocli:picocli:3.6.0'
    implementation 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:' + getVersion()

    testRuntime 'org.bouncycastle:bcpkix-jdk15on:1.66'
    //testRuntime 'org.bouncycastle:bcprov-ext-jdk15on:1.66'
    testRuntime 'org.bouncycastle:bcprov-jdk15on:1.66'
    testRuntime 'org.apache.commons:commons-cli:1.4'

    testRuntime 'org.apache.commons:commons-csv:1.8'

    testRuntime 'org.apache.commons:commons-codec:1.11'
    testRuntime 'com.payneteasy:ber-tlv:1.0-8'
    testRuntime 'org.slf4j:slf4j-api:2.0.0-alpha1'
    testRuntime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
    testRuntime 'ch.qos.logback:logback-core:1.3.0-alpha5'
    testRuntime 'org.xerial:sqlite-jdbc:3.32.3.2'
    testRuntime 'org.apache.ibatis:ibatis-core:3.0'
    testRuntime 'org.junit.jupiter:junit-jupiter-api:5.4.2'
    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.4.2'
    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.4.2'
    testRuntime 'org.junit.platform:junit-platform-launcher:1.4.2'
    testRuntime 'info.picocli:picocli:3.6.0'
    testRuntime 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:' + getVersion()

    runtime 'org.bouncycastle:bcpkix-jdk15on:1.66'
    //runtime 'org.bouncycastle:bcprov-ext-jdk15on:1.66'
    runtime 'org.bouncycastle:bcprov-jdk15on:1.66'
    runtime 'org.apache.commons:commons-cli:1.4'

    runtime 'org.apache.commons:commons-csv:1.8'

    runtime 'org.apache.commons:commons-codec:1.11'
    runtime 'com.payneteasy:ber-tlv:1.0-8'
    runtime 'org.slf4j:slf4j-api:2.0.0-alpha1'
    runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
    runtime 'ch.qos.logback:logback-core:1.3.0-alpha5'
    runtime 'org.xerial:sqlite-jdbc:3.32.3.2'
    runtime 'org.apache.ibatis:ibatis-core:3.0'
    runtime 'org.junit.jupiter:junit-jupiter-api:5.4.2'
    runtime 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
    runtime 'org.junit.jupiter:junit-jupiter-params:5.4.2'
    runtime 'org.junit.jupiter:junit-jupiter-params:5.4.2'
    runtime 'org.junit.platform:junit-platform-launcher:1.4.2'
    runtime 'info.picocli:picocli:3.6.0'
    runtime 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:' + getVersion()

    junitXmlToHtml 'org.apache.ant:ant-junit:1.10.8'
}

jar {
    doFirst {
        version = getVersion()
    }
    doLast {
        println 'archiveName: ' + archiveName
        configurations.runtime.each { println it }
    }
}

extraJavaModuleInfo {

    module("bcprov-jdk15on-1.66.jar", "org.bouncycastle", "1.66") {
        exports("bcprov.jdk15on")
    }
    //module("bcprov-ext-jdk15on-1.66.jar", "org.bouncycastle", "1.66") {
    //    exports("bcprov.ext.jdk15on")
    //}
    module("bcpkix-jdk15on-1.66.jar", "org.bouncycastle", "1.66") {
        exports("bcpkix.jdk15on")
    }
    module("ber-tlv-1.0-8.jar", "com.payneteasy", "1.08") {
        exports("ber.tlv")
    }
    module("hamcrest-core-1.3.jar", "org.hamcrest", "1.3") {
        exports("hamcrest.core")
    }
    module("slf4j-api-2.0.0-alpha1.jar", "org.slf4j", "1.4") {
        exports("slf4j.api")
    }
    module("sqlite-jdbc-3.32.3.2.jar", "org.xerial.sqlite", "3.32.3.2") {
        exports("org.xerial.sqlite")
        exports("org.sqlite")
    }
    module("commons-csv-1.8.jar","org.apache.commons.csv", "1.8") {
        exports("org.apache.commons.csv")
        exports("commons.csv")
    }
    module("commons-cli-1.4.jar", "org.apache.commons.cli", "1.4") {
        exports("org.apache.commons.cli")
        exports("commons.cli")
    }
    module("commons-codec-1.11.jar", "org.apache.commons.codec", "1.11") {
        exports("org.apache.commons.codec.binary")
        exports("org.apache.commons.codec")
        exports("commons.codec")
    }
    module("junit-4.11.jar","org.junit.jupiter", "4.11") {
        exports("org.junit")
        exports("org.junit.runner")
        exports("org.junit.internal")
    }
    module("junit-platform-launcher-5.7.0-RC1.jar","org.junit.platform", "5.7.0-RC1") {
        exports("org.junit.platform.launcher")
    }
    module("junit-platform-commons-5.7.0-RC1.jar","org.junit.platform.commons", "5.7.0-RC1") {
        exports("org.junit.platform.commons")
    }
    module("activation-1.1.jar","javax.activation", "1.1") {
        exports("activation")
    }
    module("checker-framework-1.7.0.jar","edu.washington.cs.types.checker", "1.7.0") {
        exports("checker.framework")
    }
    module("logback-classic-1.3.0-alpha5.jar","ch.qos.logback", "1.3.0-alpha5") {
        exports("logback.classic")
    }
    module("logback-core-1.3.0-alpha5.jar","ch.qos.logback", "1.3.0-alpha5") {
        exports("logback.core")
    }
    automaticModule("ibatis-core-3.0.jar","org.apache.ibatis")
}

compileJava {
    options.debugOptions.debugLevel = "source,lines,vars"
    String moduleName = "";
    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
        moduleName = 'gov.gsa.pivconformance.conformancelib'
        inputs.property("moduleName", moduleName)
        println 'compileJava.moduleName and version: ' + moduleName + '-' + getVersion()
    }

    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}

compileTestJava {
    String moduleName = "";
    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
        moduleName = 'gov.gsa.pivconformance.conformancelib.test'
        version = getVersion()
        inputs.property("moduleName", moduleName)
    }
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'org.junit.jupiter.api',
                '--add-reads', "$moduleName=org.junit.jupiter.api",
                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
        ]
        classpath = files()
    }
}

test {
    version = getVersion()
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

//junitPlatform { }

compileJava {
    options.debugOptions.debugLevel = "source,lines,vars"
}

task sourceJar(type: Jar, dependsOn: classes) {
    classifier 'sources'
    from sourceSets.main.allSource
}

task copyShadowLibs(type: Copy) {
    from configurations.shadow
    into '../libs'
}

shadowJar.dependsOn copyShadowLibs

shadowJar.doFirst {
    version = getVersion()
    println 'shadowJar.doFirst.archveName: ' + archiveName
}

task installSource(type: Copy) {
    dependsOn copyShadowLibs
    dependsOn sourceJar
    from sourceJar
    into '../libs' 
}

task install(type: Copy) {
    version = getVersion()
    dependsOn jar
    dependsOn shadowJar
    from jar
    into '../libs' 
}
